--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,3 +19,9 @@ steps:
     npm install
     npm run build
   displayName: 'npm install and build'
+
+- task: ContainerBuild@0
+  inputs:
+    dockerRegistryServiceConnection: 'containerRegistryEdison'
+    repository: 'test'
+    Dockerfile: 'Dockerfile'
